# outerspace

./: .gitignore  README.md  TODO.md  environment.yml  example.toml  example_makefile.mk  makefile  pyproject.toml  setup.py
.timetracker/: config
bib/: bibliography.bib
doc/: definitions.md  indexed_lib_grna_query_umi.dna  names.md
doc/timetracking/: timetracker_outerspace_dvklo.csv  timetracker_outerspace_jupyter-rachel.berman.csv  timetracker_outerspace_jupyter-sb4476.csv
docs/: README.md  cli_api.md  commands.md  config.md  install.md  regex_explainer.md  snakemake.md  stats.md  usage.md  walkthrough.md  wrappers.md
grna_extraction/: __init__.py  cli.py  config.py  extraction_attempt.py  grna_extraction.config.py  grna_extraction.py  read_fastq.py  search.py  strcmp.py  top_search.py  umi.py
notebooks/: extraction_attempt.ipynb
original/: README.md  cli.md  collapse.py  count.py  extraction_attempt.py  gini.py  visualize.py
outerspace/: __init__.py  cli.py  config.py  outerspace.py  pattern.py  read.py  read_fastq.py  search.py  stats.py  strcmp.py  top_search.py  umi.py
outerspace/cli/: __init__.py  logging_config.py  main.py
outerspace/stats/: __init__.py  base.py  differential.py  multi.py  single.py  utils.py
tests/: conftest.py  example.sh  test_cli.py  test_config.py  test_config_read_write.py  test_grna_extraction.py  test_pattern.py  test_read.py  test_read_fastq.py  test_revpat.py  test_search.py  test_strcmp.py  test_umi.py
tests/configs/: compiled_config.toml  grnaquery.cfg  grnaquery.toml
tex/: main.tex
workflow/: Snakefile
(+126 files in other folders)
